# phu-arp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  lint.yml  mcp.yml
cpp-src/: Event.h  EventSource.h  README.md  SyncGlobals.h
lib/: CMakeLists.txt  ChordNotesTracker.h  ChordNotesTrackerExample.cpp  Event.h  EventListener.h  EventSource.h  ExampleUsage.cpp  README.md  SyncGlobals.h  SyncGlobalsListener.h
src/: CMakeLists.txt  ChordNotesTracker.h  ChordPatternCoordinator.h  ChordPatternCoordinator_README.md  EditorLogger.cpp  EditorLogger.h  PatternTracker.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
